--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,15 @@ name: Test Pipeline
 on:
   workflow_dispatch:
 jobs:
-  build:
+  Test-List:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Hello World Test
-        run: echo Hello, world!
-      - name: Run a multi-line script
+      - name: List directories
+        run: ls -lrt
+      - name: Run a multi-line script pwd
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          pwd,
+          date,
+          uname.
+          uname.
